@@ -1,3 +1,8 @@
+2020-01-24  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/wagon/providers/GSUtilWagon.java:
+	Re-implemented with com.google.cloud.storage.Storage.
+
 2020-01-23  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ball/maven/wagon/providers/S3UtilWagon.java:
